# firescraper

./: package-lock.json  package.json  setup.sh
docs/plans/: 2026-03-31-firescraper-design.md  2026-03-31-firescraper-implementation.md  2026-04-01-youtube-transcription-design.md  2026-04-01-youtube-transcription.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  deepgram.rs  firecrawl.rs  lib.rs  main.rs  types.rs  youtube.rs
src-tauri/src/llm/: anthropic.rs  google.rs  mod.rs  openai.rs  openrouter.rs
src/lib/: settings.ts
src/lib/components/: OutputTabs.svelte  Settings.svelte
src/routes/: +page.svelte
